--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,32 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.flex{
+    display: flex;
+}
+
+.container{
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background-color: #5a231a;
+}
+
+.grid-row{
+    width: 500px;
+    height: 500px;
+    background-color: rgb(255, 191, 180);
+    border: 1px solid white;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cell{
+    height: 47.8px;
+    width: calc(100% / 10 - 2px);
+    background-color: coral;
+    border: 1px solid white;
+}
