--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,16 +4,22 @@
     box-sizing: border-box;
 }
 
+.top-btm-navs{
+    height: 50px;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .flex{
     display: flex;
 }
 
 .container{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 100px);
     align-items: center;
     justify-content: center;
-    background-color: #5a231a;
+    background-color: cornflowerblue;
 }
 
 .grid-row{
