--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+/* GENERAL */
+body{
+    font-family: 'Roboto Mono', monospace;
+}
+
+/* UTILITIES */
 .h-margin{
     margin: 0 10px 0 10px;
 }
@@ -12,14 +18,55 @@
     display: none;
 }
 
+/* IDs */
+#logo{
+    width: 30px;
+    height: 30px;
+}
+
+#game-title{
+    margin-left: 10px;
+    font-family: 'Rampart One', cursive;
+}
+
+/* CLASSES */
+.top-sx-div{
+    align-items: center;
+}
+
 .top-btm-navs{
     height: 50px;
     align-items: center;
     justify-content: space-between;
 }
 
+.refresh-btn{
+    padding: 2px 5px;
+    background-color: rgb(47, 255, 161);
+    border: 1px solid #5b5b5b;
+    border-radius: 5px;
+    font-size: small;
+}
+
+.refresh-btn:hover{
+    border: 1px solid #000000;
+}
+
+.refresh-btn > a{
+    color: #000000;
+}
+
 .play-btn{
+    font-family: 'Roboto Mono', monospace;
     padding: 2px 10px;
+    background-color: greenyellow;
+    border: 1px solid #5b5b5b;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.play-btn:hover{
+    border: 1px solid #000000;
 }
 
 .flex{
@@ -37,8 +84,8 @@
 .grid-row{
     width: 500px;
     height: 500px;
-    background-color: rgb(255, 191, 180);
-    border: 1px solid white;
+    background-color: #b7c2b6;
+    border: 1px solid #000000;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
@@ -50,9 +97,13 @@
     justify-content: center;
     height: 47.8px;
     width: calc(100% / 10 - 2px);
-    background-color: #f7ffcb;
-    color: rgb(19, 19, 19);
+    background-color: #fafee3;
+    color: #131313;
     border: 1px solid #666666;
+}
+
+.cell:hover{
+    border: 1px solid #000000;
 }
 
 .cell:hover{
