--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,6 +69,16 @@ body{
     border: 1px solid #000000;
 }
 
+.grey-out{
+    font-family: 'Roboto Mono', monospace;
+    padding: 2px 10px;
+    background-color: #5b5b5b;
+    color: #909090;
+    border: 1px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .flex{
     display: flex;
 }
